--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
   "printWidth": 100,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "singleQuote": false,
   "endOfLine": "auto"
 }
