--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
     "react-hook-form": "^7.39.7",
+    "react-imask": "^6.4.3",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
