--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.2.0",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "notistack": "^2.0.8",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-chartjs-2": "3.0.4",
