--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styled-engine": "5.4.1",
+    "@mui/styles": "^5.11.2",
     "@mui/x-data-grid": "^5.17.13",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
